--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jquery": "^3.5.0",
     "mongoose": "^5.9.10",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
